--- a/hpm-setup/sandbox/header2019.html
+++ b/hpm-setup/sandbox/header2019.html
@@ -168,10 +168,10 @@
     </symbol>
   
 </svg>
-<!-- <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
 <script src="http://www.habman.com/mfl/apps/js/1.10.4_jquery-ui.min.js"></script>
 <script src="//nitrografixx.com/MFL-Lineup/lineup.js"></script> 
-<script src="//use.fontawesome.com/6ccd97559b.js"></script>  -->
+<script src="//use.fontawesome.com/6ccd97559b.js"></script> 
 
 <script>
   //THIS NEEDS TO BE PLACED IN HEADER AND IS USED TO GO BACK IN HISTORY FOR MFL'S LIVE SCORING
@@ -187,11 +187,13 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <div class="league_logo" id="league_logo" href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
-          <a href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
-            <img class="img-responsive" src="https://drive.google.com/uc?export=view&id=1gMyZ1O-ZHryf0CshO2D6zeKAebpEpSQu" style="filter:grayscale(0%)">
-          </a>
-        </div> 
+        <a href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
+
+          <img class="bannericon" src="https://drive.google.com/uc?export=view&id=1e_fpcxsXGIQQKg7BaxPjGCeFlR7ygcmg" style="filter:grayscale(0%)">
+          <!-- <div class="league_logo" id="league_logo" src="https://drive.google.com/file/d/1e_fpcxsXGIQQKg7BaxPjGCeFlR7ygcmg/view?usp=sharing"> -->
+            
+        
+        <div class="clearfix visible-xs-block visible-sm-block visible-md-block"></div>
       </div>
       <!-- column -->
       <div class="col-md-6">
@@ -248,7 +250,7 @@
 <!-- POPUPS - Player News / Article News / Trades / MFL Messages & League Reminders -->
 <script>
   //ENABLE PLAYER NEWS POPUP
-  var MFLPopupEnablePlayerNews = false;
+  var MFLPopupEnablePlayerNews = true;
   var MFLPopupEnableQuickIcon = false;
   
   //ENABLE ARTICLE POPUP
@@ -270,7 +272,7 @@
   var ShowMFLlogin = false; // Set this to true to have a login button added to menu
   var ShowMFLsearch = false; // Set this to true to have a player button added to menu
   var LoginSearchMobileCSS = false; // If using the login or search popup and site designed for mobile set this to true
-</script> 
+</script>
 
 <!-- container-fluid -->
 <div class="mobile-scroll-wrapper">
