minor updates to header.html and main README

--- a/hpm-setup/header.html
+++ b/hpm-setup/header.html
@@ -69,7 +69,7 @@
 <div class="container d-flex h-100 align-items-center">
   <div class="gdl_logo" id="gdl_logo" href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
     <a href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
-      <img class="center-block img-responsive" src="https://drive.google.com/uc?export=view&id=1jyu15Q6k9hjeBZULMDJzTXwZqIoWLrg3" style="filter:grayscale(0%)">
+      <img class="center-block img-responsive" src="https://github.com/gsypolt/ggl-project/blob/master/images/banners/2021banner.jpg?raw=true" style="filter:grayscale(0%)">
     </a>
   </div>
 </div>
