push old and new updates

--- a/hpm-setup/header.html
+++ b/hpm-setup/header.html
@@ -1,3 +1,4 @@
+<script src="https://www.mflscripts.com/mfl-apps/global/cache.js"></script>
 <!-- <script>
   function setTheme(themeName){localStorage.setItem('theme_'+year+'_'+league_id, themeName);document.documentElement.className = themeName;}
   (function(){if(localStorage.hasOwnProperty('theme_'+year+'_'+league_id)) setTheme(localStorage.getItem('theme_'+year+'_'+league_id));})();
@@ -67,8 +68,8 @@
 </style>
 
 <div class="container d-flex h-100 align-items-center">
-  <div class="gdl_logo" id="gdl_logo" href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
-    <a href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
+  <div class="gdl_logo" id="gdl_logo" href="//%HOST%/%YEAR%/home/%LEAGUEID%">
+    <a href="//%HOST%/%YEAR%/home/%LEAGUEID%">
       <img class="center-block img-responsive" src="https://github.com/gsypolt/ggl-project/blob/master/images/banners/2021banner.jpg?raw=true" style="filter:grayscale(0%)">
     </a>
   </div>
@@ -136,6 +137,8 @@
     </div>
 </div>
 
+<!-- CUSTOM TAB SCRIPT JS FILE -->
+<script src="https://www.mflscripts.com/mfl-apps/tabs/script.js"></script>
 <!-- DEFINE GLOBAL VARIABLES  -->
 <script>
   // ADD COMMISSIONER ABILITIES LINK TO MENU
