fixed css and mobile menu

--- a/hpm-setup/header.html
+++ b/hpm-setup/header.html
@@ -1,3 +1,4 @@
+<script src="https://www.mflscripts.com/mfl-apps/global/cache.js"></script>
 <!-- <script>
   function setTheme(themeName){localStorage.setItem('theme_'+year+'_'+league_id, themeName);document.documentElement.className = themeName;}
   (function(){if(localStorage.hasOwnProperty('theme_'+year+'_'+league_id)) setTheme(localStorage.getItem('theme_'+year+'_'+league_id));})();
@@ -67,9 +68,9 @@
 </style>
 
 <div class="container d-flex h-100 align-items-center">
-  <div class="gdl_logo" id="gdl_logo" href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
-    <a href="//%STATICHOST%/%YEAR%/home/%LEAGUEID%">
-      <img class="center-block img-responsive" src="https://github.com/gsypolt/ggl-project/blob/master/images/banners/2021banner.jpg?raw=true" style="filter:grayscale(0%)">
+  <div class="gdl_logo" id="gdl_logo" href="//%HOST%/%YEAR%/home/%LEAGUEID%">
+    <a href="//%HOST%/%YEAR%/home/%LEAGUEID%">
+      <img class="center-block img-responsive" src="https://github.com/gsypolt/ggl-project/blob/master/images/banners/2022banner.jpg?raw=true" style="filter:grayscale(0%)">
     </a>
   </div>
 </div>
@@ -136,6 +137,8 @@
     </div>
 </div>
 
+<!-- CUSTOM TAB SCRIPT JS FILE -->
+<script src="https://www.mflscripts.com/mfl-apps/tabs/script.js"></script>
 <!-- DEFINE GLOBAL VARIABLES  -->
 <script>
   // ADD COMMISSIONER ABILITIES LINK TO MENU
@@ -242,7 +245,8 @@
 <!-- MFL LIVE SCORING SCRIPT ALL PLAY LEAGUES --> 
 <script src="https://www.mflscripts.com/mfl-apps/scoreboard/replace-mflScoring/allplay.js"></script>
 
-<script src="https://mflscripts.com/mfl-apps/global/header.js?v=1.3.2"></script>
+<!-- <script src="https://mflscripts.com/mfl-apps/global/header.js?v=1.3.2"></script> -->
+<script src="https://mflscripts.com/mfl-apps/global/header.js"></script>
 <link rel="stylesheet" type="text/css" href="https://www.mflscripts.com/mfl-apps/lineups/submit/responsive.css?v=1.0.0">
 <link rel="stylesheet" type="text/css" href="https://www.mflscripts.com/mfl-apps/global/css/300x50-icons.css?v=1.0.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
